k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-cicd-demo-service

spec:
  selector:
    app: node-cicd-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
