k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-cicd-demo-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: api.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: node-cicd-demo-service
                port:
                  number: 80
